fix: add text-align left to DatePicker, DateInput, TimeInput labels

--- a/design/system/components/forms/DatePicker/DatePicker.css
+++ b/design/system/components/forms/DatePicker/DatePicker.css
@@ -25,6 +25,7 @@
   color: var(--text-form-label);
   margin-bottom: 4px;
   display: block;
+  text-align: left;
   user-select: none;
 }
 
